--- a/app/views/mob/index.html.erb
+++ b/app/views/mob/index.html.erb
@@ -1,2 +1,11 @@
 <h1>Mob#index</h1>
 <p>Find me in app/views/mob/index.html.erb</p>
+<div class="ui input">
+  <input type=text/>
+</div>
+<button class="ui button">Sample</button>
+
+<div class="ui indicating progress">
+  <div class="bar"></div>
+  <div class="label">Uploading Files</div>
+</div>
