--- a/app/assets/stylesheets/mob.scss
+++ b/app/assets/stylesheets/mob.scss
@@ -1,3 +1,4 @@
 // Place all the styles related to the mob controller here.
-// They will automatically be included in application.css.
+// They will automatically be included in application.css.scss.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+@import "semantic-ui";
